# Tatakai

./: .env.development  .env.example  .env.tauri  .env.web  .gitignore  .gitmodules  1design.json  BUILD_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  capacitor.config.ts  eslint.config.js  index.html  output.txt  package-lock.json  package.json  readme.md  vercel.json  vite.config.ts
android/: .gitignore  BUILD_GUIDE.md  CURRENT_PROGRESS.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  NEXT_STEPS.md  README.md  STATUS_REPORT.md  capacitor.settings.gradle  local.properties.example  settings.gradle.kts  tatakai-release.keystore
android-app/: .gitignore  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_NOTES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  settings.gradle.kts
desktop/: downloader.cjs  logger.cjs  main.cjs  main.js  offline.html  preload.cjs  preload.js  splash.html
docs/: Backend.md  FINAL_PRODUCTION_SETUP.md  NEWAPI.MD  PRODUCTION_FEATURES.md  WORKING_API.md  backend.md  design_guideline.md  disclaimerai.md  full_feature_tool_optimization_master_plan.md  performance_and_502_optimization_plan.md
proxy/: README.md  package-lock.json  package.json  render.yaml  wrangler.toml
public/: manifest.json  robots.txt  sitemap.xml  sw.js
resources/: icon.icns
save/: emojis copy.json
scripts/: backfillMalIds.cjs  generate-android-icons.cjs  generate-app-icons.js  generate-assets.cjs  ptero-start.mjs
src/: App.tsx  index.css  main.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+604 files in other folders)
